[package]
name = "orphanage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
mongodb = { version = "2", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
serde = { version = "1" }
log = { version = "0" }
env_logger = { version = "0" }